# collectPackage

./: .gitignore  LICENSE  collectPackage.cabal  stack.yaml
src/: CollectPackage.hs  Lens.hs  PackageInfo.hs
