name:                collectPackage
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ryanreich/collectPackage
license:             MIT
license-file:        LICENSE
author:              Ryan Reich
maintainer:          ryan.reich@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable collectPackage
  hs-source-dirs: bin
  main-is: Main.hs
  build-depends: base, collectPackage
  default-language: Haskell2010

library 
  buildable: True
  hs-source-dirs: src
  exposed-modules: CollectPackage
  other-modules:
    Lens
    PackageInfo
  build-depends:
    base,
    bytestring,
    Cabal >=2.0.1.0,
    containers,
    directory,
    filepath,
    ghc-boot,
    lens,
    mtl,
    process,
    template-haskell,
    unix
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    NamedFieldPuns
    RankNTypes
    RecordWildCards

